--- a/src/app/pages/state-machine-page/state-machine-live/state-machine-rebill/state-machine-rebill.component.scss
+++ b/src/app/pages/state-machine-page/state-machine-live/state-machine-rebill/state-machine-rebill.component.scss
@@ -19,7 +19,11 @@ table-memory {
   width: 33%;
 
   &--small {
-    width: 28%;
+    width: 26%;
+  }
+
+  &--medium {
+    width: 30%;
   }
 
   &--large {
@@ -103,4 +107,30 @@ table-memory {
 customer-credit-card-view {
   display: block;
   margin-top: 10px;
+}
+
+.properties-container {
+  padding: 0;
+  font-size: 12px;
+  color: rgba(0, 0, 0, 0.87);
+
+  .clickable {
+    cursor: pointer;
+  }
+
+  div {
+    padding: 10px 12px;
+    border-bottom: 1px solid rgba(0,0,0,0.1);
+    cursor: default;
+
+    &:last-of-type {
+      border-bottom: none;
+    }
+
+    span {
+      margin-right: 2px;
+      font-weight: 500;
+    }
+
+  }
 }
