--- a/src/assets/scss/_search.scss
+++ b/src/assets/scss/_search.scss
@@ -176,6 +176,10 @@ $border-color: rgba(0, 0, 0, 0.2);
       font-size: 13px;
       color: #7C7C7C;
 
+      &--date {
+        margin-bottom: 0;
+      }
+
       &__name {
         text-transform: capitalize;
       }
