Fix behaviour of acting as functionality

--- a/src/app/pages/accounts-page/account-view/account-view.component.html
+++ b/src/app/pages/accounts-page/account-view/account-view.component.html
@@ -40,7 +40,7 @@
         [textOptions]="text"
         [associateDataMapper]="aclMapper"
         [customAssociation]="true"
-        [associationEnabled]="authService.isActiveAclMasterAccount()"
+        [associationEnabled]="isOwnerOrAdministrator() || authService.isActiveAclMasterAccount()"
         [editEnabled]="false"
         [viewEnabled]="false"
         [dissociationEnabled]="isOwnerOrAdministrator() || authService.isActiveAclMasterAccount()"
