--- a/src/app/pages/state-machine-page/state-machine-live/state-machine-live.component.html
+++ b/src/app/pages/state-machine-page/state-machine-live/state-machine-live.component.html
@@ -10,6 +10,7 @@
     [timeseries]="timeseries"
     [standalone]="true"
     [isPolling]="polling"
+    [enableLivePolling]="enableLivePooling"
     [date]="date"
     (dateChanged)="changeDate($event)"
     (togglePolling)="$event ? startPolling() : pausePolling()">
