Update empty charts on details pages

--- a/src/app/charts/state-machine-details-chart/state-machine-details-chart.component.html
+++ b/src/app/charts/state-machine-details-chart/state-machine-details-chart.component.html
@@ -1,3 +1,5 @@
 <div class="fit-chart">
-  <chart style="display: block" [options]="chartOptions" (load)="saveChart($event.context)"></chart>
+  <chart [style.display]="stateMachineTimeseries.length > 0 ? 'block' : 'none'" [options]="chartOptions" (load)="saveChart($event.context)"></chart>
+  <chart [style.display]="stateMachineTimeseries.length === 0 ? 'block' : 'none'" [options]="chartEmptyOptions" (load)="saveEmptyChart($event.context)"></chart>
+  <div class="no-data" *ngIf="showNoData">Insufficient Data</div>
 </div>
