--- a/src/app/pages/state-machine-page/state-machine-dashboard/state-machine-details/state-machine-details.component.html
+++ b/src/app/pages/state-machine-page/state-machine-dashboard/state-machine-details/state-machine-details.component.html
@@ -61,6 +61,6 @@
       [embedded]="true"
       (dateChanged)="dateChanged.emit($event)">
     </advanced-filter>
-    <state-machine-details-chart [timeseries]="timeseries"></state-machine-details-chart>
+    <state-machine-details-chart [timeseries]="timeseries" [date]="date"></state-machine-details-chart>
   </div>
 </div>
