Update Copys based on Logans instructions

--- a/src/app/pages/campaigns-page/campaign-view/campaign-add-new/campaign-add-new.component.html
+++ b/src/app/pages/campaigns-page/campaign-view/campaign-add-new/campaign-add-new.component.html
@@ -1,6 +1,6 @@
 <div class="entity-view__card" [class.entity-view__card--create]="mode === modes.Add" [style.margin]="mode === modes.Add ? 'auto' : '10px'">
   <div class="entity-view__card__header">
-    <div class="entity-view__card__header__title">{{mode === modes.Add ? 'Create new Campaign' : 'Campaign general details'}}</div>
+    <div class="entity-view__card__header__title">{{mode === modes.Add ? 'Create New Campaign' : 'Campaign General Details'}}</div>
     <ng-container *ngIf="mode !== modes.Add">
       <md-icon [md-menu-trigger-for]="editOptions">more_vert</md-icon>
       <md-menu #editOptions="mdMenu" x-position="before">
@@ -11,7 +11,7 @@
 
   <div class="entity-view__card__content">
     <md-input-container [class.error]="formInvalid && !entity.name" class="entity-view__card__content__item">
-      <input required md-input [disabled]="mode === modes.View" placeholder="Campaign name" [(ngModel)]="entity.name" type="text">
+      <input required md-input [disabled]="mode === modes.View" placeholder="Campaign Name" [(ngModel)]="entity.name" type="text">
     </md-input-container>
     <div class="flex-custom flex-custom--center prepaid-checkbox">
       <span>Allow Prepaid</span>
