--- a/src/app/pages/affiliates-page/affiliate-view/affiliate-add-new/affiliate-add-new.component.html
+++ b/src/app/pages/affiliates-page/affiliate-view/affiliate-add-new/affiliate-add-new.component.html
@@ -1,11 +1,11 @@
 <div class="entity-view__card entity-view__card--create" style="margin: auto">
   <div class="entity-view__card__header">
-    <div class="entity-view__card__header__title">Create new Affiliate</div>
+    <div class="entity-view__card__header__title">Create New Affiliate</div>
   </div>
 
   <div class="entity-view__card__content">
     <md-input-container [class.error]="formInvalid && !entity.name" class="entity-view__card__content__item">
-      <input required md-input placeholder="Affiliate name" [(ngModel)]="entity.name" type="text">
+      <input required md-input placeholder="Affiliate Name" [(ngModel)]="entity.name" type="text">
     </md-input-container>
 
     <md-input-container [class.error]="formInvalid && !entity.affiliateId" class="entity-view__card__content__item">
