Fix sidenav font issues

--- a/src/assets/scss/_navigation.scss
+++ b/src/assets/scss/_navigation.scss
@@ -148,7 +148,7 @@ md-nav-list.side-navigation {
       }
 
       .sidenav-item__text {
-        width: 132px;
+        width: 100%;
         font-size: 0.7em;
       }
     }
