--- a/src/app/pages/state-machine-page/state-machine-dashboard/state-machine-status/state-machine-status-item/state-machine-status-item.component.scss
+++ b/src/app/pages/state-machine-page/state-machine-dashboard/state-machine-status/state-machine-status-item/state-machine-status-item.component.scss
@@ -75,3 +75,11 @@
   border-right: 5px solid transparent;
   border-bottom: 10px solid black;
 }
+
+.placeholder {
+  display: inline-block;
+  width: 60%;
+  height: 20px;
+  background: rgba(0,0,0,0.12);
+
+}
