--- a/src/app/pages/state-machine-page/state-machine-dashboard/state-machine-details/state-machine-details.component.scss
+++ b/src/app/pages/state-machine-page/state-machine-dashboard/state-machine-details/state-machine-details.component.scss
@@ -117,3 +117,18 @@ advanced-filter {
   margin-bottom: 5px;
   text-align: right;
 }
+
+.placeholder {
+  display: inline-block;
+  background: rgba(0,0,0,0.12);
+
+  &--small {
+    height: 15px;
+    width: 70px;
+  }
+
+  &--large {
+    width: 80px;
+    height: 60px;
+  }
+}
